# coolify-docker-statuses

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/appclis/: containerstatus.py
src/libcoolifydockerstatuses/: constants.py  containerstatus.py  webhooknotifier.py
